--- a/views/footer.erb
+++ b/views/footer.erb
@@ -1,4 +1,4 @@
-<footer>
+<nav>
   <% if request.path_info == "/" %>
     <a class="button quiz-button" href="quiz">
       <img src="icons/gamepad.svg" id="quiz-icon" alt="">
@@ -14,4 +14,4 @@
       <div>トップにもどる</div>
     </a>
   <% end %>
-</footer>
+</nav>
