--- a/public/style.css
+++ b/public/style.css
@@ -675,6 +675,7 @@ aside #info section p .audio-indicator {
 
 .my-pokemon-stats {
   width: 90vw;
+  max-width: 800px;
   margin: 5rem auto 2rem;
   text-align: center;
   background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
@@ -691,17 +692,26 @@ aside #info section p .audio-indicator {
 .my-pokemon-stats p {
   font-size: 2rem;
 }
+@media (min-width: 67em) {
+  .my-pokemon-stats h2 {
+    font-size: 2.4rem;
+  }
+  .my-pokemon-stats p {
+    font-size: 4rem;
+  }
+}
 
 .my-pokemons {
   width: 100vw;
   margin: 0 auto 15%;
-  max-width: 1170px;
+  max-width: 800px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
 }
 .my-pokemons .pokemon {
   position: relative;
   text-align: center;
+  margin-bottom: 1.5rem;
 }
 .my-pokemons .pokemon img {
   height: 90px;
