--- a/sass/my-pokemons/_index.scss
+++ b/sass/my-pokemons/_index.scss
@@ -1,5 +1,6 @@
 .my-pokemon-stats {
   width: 90vw;
+  max-width: 800px;
   margin: 5rem auto 2rem;
   text-align: center;
   @include glass-background-dark();
@@ -14,18 +15,27 @@
   p {
     font-size: 2rem;
   }
+  @media (min-width: $breakpoint-lg) {
+    h2 {
+      font-size: 2.4rem;
+    }
+    p {
+      font-size: 4rem;
+    }
+  }
 }
 
 .my-pokemons {
   width: 100vw;
   margin: 0 auto 15%;
-  max-width: 1170px;
+  max-width: 800px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
 
   .pokemon {
     position: relative;
     text-align: center;
+    margin-bottom: 1.5rem;
     img {
       height: 90px;
       width: auto;
