--- a/views/my_pokemon.erb
+++ b/views/my_pokemon.erb
@@ -6,7 +6,7 @@
   <% @pokemon_count.times do |index| %>
     <%= next if index == 0 %>
     <div class="pokemon" id="<%= "#{index.to_s.rjust(3, "0")}" %>">
-      <img src="icons/unknown.svg" alt="pokemon image">
+      <img src="icons/unknown.svg" alt="ポケモン画像">
       <h2><%= index %></h2>
     </div>
   <% end %>
