--- a/sass/global.scss
+++ b/sass/global.scss
@@ -2,6 +2,7 @@
 @import "./variables/";
 @import "./fonts/";
 @import "./common/";
+@import "./modal/";
 @import "./home/";
 @import "./quiz/";
 @import "./my-pokemons/";
