--- a/sass/common/_index.scss
+++ b/sass/common/_index.scss
@@ -78,6 +78,7 @@ nav {
     &.quiz-button {
       background-color: #c8ffcb;
       border-bottom: 6px solid #8fb891;
+      transition: all 0.1s;
       &:active {
         margin-top: 7px;
         background: #c8ffcb;
@@ -87,6 +88,7 @@ nav {
     &.collection-button {
       background-color: #f7ed94;
       border-bottom: 6px solid #b3aa62;
+      transition: all 0.1s;
       &:active {
         margin-top: 7px;
         background: #f7ed94;
@@ -113,6 +115,25 @@ nav {
     .button {
       padding: 0.2rem 0;
       margin: 0.5rem 0;
+
+      &.quiz-button {
+        &:active {
+          margin-top: 10px;
+          background: #c8ffcb;
+          border-bottom: 2px solid #8fb891;
+        }
+      }
+      &.collection-button {
+        background-color: #f7ed94;
+        border-bottom: 6px solid #b3aa62;
+        transition: all 0.1s;
+        &:active {
+          margin-top: 7px;
+          background: #f7ed94;
+          border-bottom: 2px solid #b3aa62;
+        }
+      }
+
     }
   }
 }
