--- a/public/style.css
+++ b/public/style.css
@@ -86,6 +86,7 @@ nav .button div {
 nav .button.quiz-button {
   background-color: #c8ffcb;
   border-bottom: 6px solid #8fb891;
+  transition: all 0.1s;
 }
 nav .button.quiz-button:active {
   margin-top: 7px;
@@ -95,6 +96,7 @@ nav .button.quiz-button:active {
 nav .button.collection-button {
   background-color: #f7ed94;
   border-bottom: 6px solid #b3aa62;
+  transition: all 0.1s;
 }
 nav .button.collection-button:active {
   margin-top: 7px;
@@ -120,6 +122,21 @@ nav .button.collection-button:active {
   nav .button {
     padding: 0.2rem 0;
     margin: 0.5rem 0;
+  }
+  nav .button.quiz-button:active {
+    margin-top: 10px;
+    background: #c8ffcb;
+    border-bottom: 2px solid #8fb891;
+  }
+  nav .button.collection-button {
+    background-color: #f7ed94;
+    border-bottom: 6px solid #b3aa62;
+    transition: all 0.1s;
+  }
+  nav .button.collection-button:active {
+    margin-top: 7px;
+    background: #f7ed94;
+    border-bottom: 2px solid #b3aa62;
   }
 }
 
@@ -353,6 +370,120 @@ nav .button.collection-button:active {
   .modal .result p {
     font-size: 2rem;
   }
+}
+.modal.card {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 140px 1fr;
+  position: relative;
+  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
+  backdrop-filter: blur(3px);
+  background-repeat: no-repeat;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  color: #1d1818;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 700;
+  position: relative;
+}
+@media (min-width: 87.5em) {
+  .modal.card {
+    grid-template-rows: 190px 1fr;
+  }
+}
+.modal.card .audio-indicator {
+  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
+  backdrop-filter: blur(3px);
+  padding: 0.3rem;
+  margin: 0.5rem;
+  border-radius: 50%;
+  box-shadow: 0 0 3px black;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.modal.card .image {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  background: no-repeat center center/cover;
+  margin: 0 auto;
+}
+.modal.card .name {
+  padding-bottom: 1rem;
+  font-size: 2rem;
+  letter-spacing: 0.4rem;
+  text-shadow: 1px 1px rgba(255, 255, 255, 0.6);
+  margin: 0;
+}
+.modal.card .attributes {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-bottom: 1rem;
+}
+.modal.card .attributes .attribute-header {
+  grid-column: 1/2;
+  padding-left: 3rem;
+}
+.modal.card .attributes .attribute-value {
+  padding-right: 3rem;
+}
+.modal.card .attributes hr {
+  grid-column: 1/3;
+  border-bottom: solid 1px black;
+  max-width: 270px;
+  width: 100%;
+}
+@media (min-width: 41em) {
+  .modal.card .attributes hr {
+    max-width: 170px;
+  }
+}
+.modal.card .tab-button-bar {
+  pointer-events: none;
+}
+.modal.card #to-left-arrow {
+  font-size: 20vh;
+  cursor: pointer;
+  font-weight: 100;
+  color: #f7ed94;
+  text-shadow: 0 6px #b3aa62;
+  transition: all 0.1s;
+  position: absolute;
+  top: 20%;
+  left: 0;
+}
+.modal.card #to-left-arrow:active {
+  margin-top: 5px;
+  text-shadow: 0 1px #b3aa62;
+}
+.modal.card #to-right-arrow {
+  font-size: 20vh;
+  cursor: pointer;
+  font-weight: 100;
+  color: #f7ed94;
+  text-shadow: 0 6px #b3aa62;
+  transition: all 0.1s;
+  position: absolute;
+  top: 20%;
+  right: 0;
+}
+.modal.card #to-right-arrow:active {
+  margin-top: 5px;
+  text-shadow: 0 1px #b3aa62;
+}
+.modal.card #to-left-caption {
+  position: absolute;
+  top: 80%;
+  left: 9%;
+  color: #867a7a;
+  text-shadow: 0px 1px #bdbdbd;
+}
+.modal.card #to-right-caption {
+  position: absolute;
+  top: 80%;
+  right: 9%;
+  color: #867a7a;
+  text-shadow: 0px 1px #bdbdbd;
 }
 
 .cards {
