--- a/sass/cards/_index.scss
+++ b/sass/cards/_index.scss
@@ -1,3 +1,5 @@
+@import "./mixins";
+
 .cards {
   display: grid;
   gap: 2rem;
@@ -18,72 +20,8 @@
   }
 
   .card {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 140px 1fr;
-
-    position: relative;
-
-    @include glass-background;
-    background-repeat: no-repeat;
-    box-shadow: 0 0 10px rgba(0,0,0, 0.4);
-    color: #1d1818;
-    text-align: center;
-    font-size: 1rem;
-    font-weight: 700;
+    @include card;
     border-radius: 5%;
-
-    @media (min-width: $breakpoint-xlg) {
-      grid-template-rows: 190px 1fr;
-    }
-
-    .audio-indicator {
-      @include audio-indicator-style;
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-
-    .image {
-      grid-column: 1 / 2;
-      grid-row: 1 / 2;
-
-      background: no-repeat center center/cover;
-      margin: 0 auto;
-    }
-
-    .name {
-      padding-bottom: 1rem;
-      font-size: 2rem;
-      letter-spacing: 0.4rem;
-      text-shadow: 1px 1px rgba(255,255,255,0.6);
-      margin: 0;
-    }
-
-    .attributes {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-
-      padding-bottom: 1rem;
-
-      .attribute-header {
-        grid-column: 1 / 2;
-        padding-left: 3rem;
-      }
-      .attribute-value {
-        padding-right: 3rem;
-      }
-
-      hr {
-        grid-column: 1 / 3;
-        border-bottom: solid 1px black;
-        max-width: 270px;
-        width: 100%;
-        @media (min-width: $breakpoint-sm) {
-          max-width: 170px;
-        }
-      }
-    }
     .overlay {
       display: none;
     }
