--- a/views/home.erb
+++ b/views/home.erb
@@ -1,4 +1,4 @@
-<aside>
+<aside id="how-to">
   <article id="info">
     <h2 class="info-icon">i</h2>
     <section>
@@ -20,6 +20,26 @@
       </p>
     </section>
   </article>
+</aside>
+<aside id="type-tags">
+  <span class="type-tag selected">いわ</span>
+  <span class="type-tag">ゴースト</span>
+  <span class="type-tag">ノーマル</span>
+  <span class="type-tag">ひこう</span>
+  <span class="type-tag">くさ</span>
+  <span class="type-tag">ほのお</span>
+  <span class="type-tag">フェアリー</span>
+  <span class="type-tag">むし</span>
+  <span class="type-tag">はがね</span>
+  <span class="type-tag">こおり</span>
+  <span class="type-tag">じめん</span>
+  <span class="type-tag">かくとう</span>
+  <span class="type-tag">エスパー</span>
+  <span class="type-tag">あく</span>
+  <span class="type-tag">どく</span>
+  <span class="type-tag">ドラゴン</span>
+  <span class="type-tag">でんき</span>
+  <span class="type-tag">みず</span>
 </aside>
 <main class="cards">
   <% @pokemons.each do |pokemon| %>
