--- a/public/style.css
+++ b/public/style.css
@@ -673,12 +673,12 @@ nav .button.collection-button:active {
   }
 }
 
-aside {
+#how-to {
   padding: 0 2rem;
   max-width: 1000px;
   margin: 20% auto 0;
 }
-aside #info {
+#how-to #info {
   text-align: center;
   letter-spacing: 1px;
   position: relative;
@@ -687,7 +687,7 @@ aside #info {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   border-radius: 10px;
 }
-aside #info .info-icon {
+#how-to #info .info-icon {
   display: inline-block;
   width: 50px;
   height: 50px;
@@ -697,23 +697,23 @@ aside #info .info-icon {
   backdrop-filter: blur(3px);
   border-radius: 50%;
 }
-aside #info section {
+#how-to #info section {
   padding: 0 10px 10px;
 }
-aside #info section h2 {
+#how-to #info section h2 {
   margin: 0;
 }
-aside #info section h3 {
+#how-to #info section h3 {
   text-align: start;
   margin-left: 5px;
 }
-aside #info section p {
+#how-to #info section p {
   text-align: start;
   font-size: 1.1rem;
   padding: 0 20px;
   line-height: 25px;
 }
-aside #info section p .audio-indicator {
+#how-to #info section p .audio-indicator {
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
   backdrop-filter: blur(3px);
   padding: 0.3rem;
@@ -725,28 +725,56 @@ aside #info section p .audio-indicator {
   height: 18px;
 }
 
+#type-tags {
+  padding: 0 2rem;
+  max-width: 1000px;
+  margin: 5% auto;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+#type-tags .type-tag {
+  font-size: 1rem;
+  padding: 0.1rem 0.5rem;
+  margin: 0.2rem 0.1rem;
+  border: 2px solid rgba(255, 255, 255, 0.6);
+  border-radius: 10px;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+#type-tags .type-tag:hover {
+  color: #474545;
+  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
+  backdrop-filter: blur(3px);
+}
+#type-tags .selected {
+  background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
+  backdrop-filter: blur(10px);
+}
+
 @media (min-width: 56em) {
-  aside {
+  #how-to {
     margin-top: 10%;
   }
-  aside #info section {
+  #how-to #info section {
     padding: 0 4rem 10px;
   }
-  aside #info section p {
+  #how-to #info section p {
     font-size: 1.25rem;
   }
 }
 @media (min-width: 67em) {
-  aside #info section {
+  #how-to #info section {
     padding: 0 8rem 10px;
   }
-  aside #info section img {
+  #how-to #info section img {
     height: 35px;
     width: auto;
   }
 }
 @media (min-width: 87.5em) {
-  aside {
+  #how-to {
     margin-top: 5%;
   }
 }
