--- a/public/style.css
+++ b/public/style.css
@@ -767,7 +767,10 @@ nav .button.collection-button:active {
 .quiz .image-container .audio-indicator {
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
   backdrop-filter: blur(3px);
+  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
+  backdrop-filter: blur(3px);
   padding: 0.5rem;
+  margin: 0.5rem;
   border-radius: 50%;
   box-shadow: 0 0 3px black;
   position: absolute;
