Add animation to sound indicator

--- a/views/home.erb
+++ b/views/home.erb
@@ -6,7 +6,7 @@
       <h3>1. ポケモンのなまえをおぼえよう！</h3>
       <p>
         このページをスクロール⬆️⬇️して、いろいろなポケモンのなまえをみてね！<br>
-        カードをタップすると、なまえをよみあげるよ！<img class="audio-indicator" src="icons/no-audio.svg" alt="音声表示例"> → <img class="audio-indicator" src="icons/audio.svg" alt="音声表示例">
+        カードをタップすると、なまえをよみあげるよ！<img class="audio-indicator" src="icons/no-audio.svg" alt="音声表示例"> → <img style="transform: rotate(-15deg);" class="audio-indicator" src="icons/audio.svg" alt="音声表示例">
       </p>
       <h3>2. クイズにちょうせんしよう！</h3>
       <p>
