switch type tags from spans to anchors

--- a/views/home.erb
+++ b/views/home.erb
@@ -22,24 +22,24 @@
   </article>
 </aside>
 <aside id="type-tags">
-  <span class="type-tag selected">いわ</span>
-  <span class="type-tag">ゴースト</span>
-  <span class="type-tag">ノーマル</span>
-  <span class="type-tag">ひこう</span>
-  <span class="type-tag">くさ</span>
-  <span class="type-tag">ほのお</span>
-  <span class="type-tag">フェアリー</span>
-  <span class="type-tag">むし</span>
-  <span class="type-tag">はがね</span>
-  <span class="type-tag">こおり</span>
-  <span class="type-tag">じめん</span>
-  <span class="type-tag">かくとう</span>
-  <span class="type-tag">エスパー</span>
-  <span class="type-tag">あく</span>
-  <span class="type-tag">どく</span>
-  <span class="type-tag">ドラゴン</span>
-  <span class="type-tag">でんき</span>
-  <span class="type-tag">みず</span>
+  <a class="type-tag selected">いわ</a>
+  <a class="type-tag">ゴースト</a>
+  <a class="type-tag">ノーマル</a>
+  <a class="type-tag">ひこう</a>
+  <a class="type-tag">くさ</a>
+  <a class="type-tag">ほのお</a>
+  <a class="type-tag">フェアリー</a>
+  <a class="type-tag">むし</a>
+  <a class="type-tag">はがね</a>
+  <a class="type-tag">こおり</a>
+  <a class="type-tag">じめん</a>
+  <a class="type-tag">かくとう</a>
+  <a class="type-tag">エスパー</a>
+  <a class="type-tag">あく</a>
+  <a class="type-tag">どく</a>
+  <a class="type-tag">ドラゴン</a>
+  <a class="type-tag">でんき</a>
+  <a class="type-tag">みず</a>
 </aside>
 <main class="cards">
   <% @pokemons.each do |pokemon| %>
