--- a/public/style.css
+++ b/public/style.css
@@ -638,7 +638,7 @@ nav .button.collection-button:active {
   }
 }
 .cards .card:hover {
-  box-shadow: none;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
   transform: scale(1.1);
 }
 
