--- a/sass/cards/_index.scss
+++ b/sass/cards/_index.scss
@@ -24,7 +24,7 @@
     border-radius: 5%;
     transition: all 0.1s;
     &:hover {
-      box-shadow: none;
+      box-shadow: 0 0 10px rgba(0,0,0,0.8);
       transform: scale(1.1);
     }
   }
