--- a/public/style.css
+++ b/public/style.css
@@ -53,7 +53,7 @@ nav {
   display: flex;
   justify-content: space-around;
   text-align: center;
-  height: 4rem;
+  height: 2.7rem;
   max-width: 1000px;
   transform: translate(calc(50vw - 50%));
   padding-bottom: 0.9rem;
@@ -64,14 +64,14 @@ nav {
 nav .button {
   font-family: DotGothic16;
   color: #000;
-  font-size: 1.1rem;
+  font-size: 0.7rem;
   font-weight: 700;
   letter-spacing: 2px;
   text-shadow: 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff;
   width: 100%;
   margin-left: 0.5rem;
-  margin-right: 0.5rem;
-  padding-top: 1rem;
+  margin-right: 0.4rem;
+  padding-top: 0.5rem;
   display: flex;
   justify-content: center;
 }
@@ -382,7 +382,7 @@ nav .button.collection-button:active {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   color: #1d1818;
   text-align: center;
-  font-size: 1rem;
+  font-size: 0.7rem;
   font-weight: 700;
   position: relative;
 }
@@ -410,7 +410,7 @@ nav .button.collection-button:active {
 }
 .modal.card .name {
   padding-bottom: 1rem;
-  font-size: 2rem;
+  font-size: 1.3rem;
   letter-spacing: 0.4rem;
   text-shadow: 1px 1px rgba(255, 255, 255, 0.6);
   margin: 0;
@@ -433,7 +433,7 @@ nav .button.collection-button:active {
   max-width: 270px;
   width: 100%;
 }
-@media (min-width: 41em) {
+@media (min-width: 33em) {
   .modal.card .attributes hr {
     max-width: 170px;
   }
@@ -553,7 +553,7 @@ nav .button.collection-button:active {
   margin: 0 auto;
   padding: 2rem 2rem 8rem;
 }
-@media (min-width: 41em) {
+@media (min-width: 33em) {
   .cards {
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
@@ -580,7 +580,7 @@ nav .button.collection-button:active {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   color: #1d1818;
   text-align: center;
-  font-size: 1rem;
+  font-size: 0.7rem;
   font-weight: 700;
   border-radius: 5%;
   transition: all 0.1s;
@@ -609,7 +609,7 @@ nav .button.collection-button:active {
 }
 .cards .card .name {
   padding-bottom: 1rem;
-  font-size: 2rem;
+  font-size: 1.3rem;
   letter-spacing: 0.4rem;
   text-shadow: 1px 1px rgba(255, 255, 255, 0.6);
   margin: 0;
@@ -632,7 +632,7 @@ nav .button.collection-button:active {
   max-width: 270px;
   width: 100%;
 }
-@media (min-width: 41em) {
+@media (min-width: 33em) {
   .cards .card .attributes hr {
     max-width: 170px;
   }
@@ -645,7 +645,7 @@ nav .button.collection-button:active {
 #how-to {
   padding: 0 2rem;
   max-width: 1000px;
-  margin: 20% auto 0;
+  margin: 25% auto 0;
 }
 #how-to #info {
   text-align: center;
@@ -658,10 +658,12 @@ nav .button.collection-button:active {
 }
 #how-to #info .info-icon {
   display: inline-block;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  color: #da0707;
+  width: 32px;
+  height: 32px;
+  line-height: 32px;
+  color: #f17f32;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
+  text-shadow: 0 0 8px rgba(216, 176, 176, 0.8);
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
   backdrop-filter: blur(3px);
   border-radius: 50%;
@@ -671,14 +673,16 @@ nav .button.collection-button:active {
 }
 #how-to #info section h2 {
   margin: 0;
+  font-size: 1.3rem;
 }
 #how-to #info section h3 {
   text-align: start;
   margin-left: 5px;
+  font-size: 1.1rem;
 }
 #how-to #info section p {
   text-align: start;
-  font-size: 1.1rem;
+  font-size: 0.8rem;
   padding: 0 20px;
   line-height: 25px;
 }
@@ -701,14 +705,14 @@ nav .button.collection-button:active {
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: start;
 }
 #type-tags .type-tag {
-  font-size: 1rem;
+  font-size: 0.8rem;
   padding: 0.1rem 0.5rem;
-  margin: 0.2rem 0.1rem;
+  margin: 0.3rem 0.4rem;
   border: 2px solid rgba(255, 255, 255, 0.6);
-  border-radius: 10px;
+  border-radius: 20px;
   transition: all 0.2s;
   cursor: pointer;
 }
@@ -756,7 +760,7 @@ nav .button.collection-button:active {
 }
 .quiz .image-container {
   grid-row: 1/2;
-  margin-top: 27%;
+  margin-top: 32%;
   align-self: center;
   position: relative;
 }
