--- a/sass/home/_index.scss
+++ b/sass/home/_index.scss
@@ -3,7 +3,7 @@
 #how-to {
   padding: 0 2rem;
   max-width: 1000px;
-  margin: 20% auto 0;
+  margin: 25% auto 0;
 
   #info {
     text-align: center;
@@ -14,10 +14,12 @@
     border-radius: 10px;
     .info-icon {
       display: inline-block;
-      width: 50px;
-      height: 50px;
-      line-height: 50px;
-      color: rgb(218, 7, 7);
+      width: 32px;
+      height: 32px;
+      line-height: 32px;
+      color: rgb(241, 127, 50);
+      box-shadow: 0 0 10px rgba(255,255,255, 0.4);
+      text-shadow: 0 0 8px rgba(216, 176, 176, 0.8);
       @include glass-background;
       border-radius: 50%;
     }
@@ -25,14 +27,16 @@
       padding: 0 10px 10px;
       h2 {
         margin: 0;
+        font-size: 1.3rem;
       }
       h3 {
         text-align: start;
         margin-left: 5px;
+        font-size: 1.1rem;
       }
       p {
         text-align: start;
-        font-size: 1.1rem;
+        font-size: 0.8rem;
         padding: 0 20px;
         line-height: 25px;
         .audio-indicator {
@@ -56,14 +60,14 @@
 
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: start;
 
   .type-tag {
-    font-size: 1rem;
+    font-size: 0.8rem;
     padding: 0.1rem 0.5rem;
-    margin: 0.2rem 0.1rem;
+    margin: 0.3rem 0.4rem;
     border: 2px solid rgba(255,255,255,0.6);
-    border-radius: 10px;
+    border-radius: 20px;
     transition: all 0.2s;
     cursor: pointer;
     &:hover {
