--- a/public/style.css
+++ b/public/style.css
@@ -43,6 +43,7 @@ header .page-title {
   text-shadow: 0px 2px 1px #003366, 0px -2px 1px #003366, -2px -2px 1px #003366, -2px 2px 1px #003366, 2px -2px 1px #003366, 2px 2px 1px #003366;
   font-size: 2.4rem;
   margin: 1.1rem 0;
+  text-align: center;
 }
 
 nav {
@@ -362,6 +363,12 @@ nav .button.collection-button:active {
   color: #000;
   font-family: DotGothic16;
   letter-spacing: 1px;
+}
+.modal .result h2 {
+  font-size: 1.1rem;
+}
+.modal .result p {
+  font-size: 0.9rem;
 }
 @media (min-width: 67em) {
   .modal .result h2 {
@@ -765,8 +772,8 @@ nav .button.collection-button:active {
   position: relative;
 }
 .quiz .image-container .image {
-  max-height: 16rem;
-  max-width: 16rem;
+  max-height: 12rem;
+  max-width: 12rem;
 }
 .quiz .image-container .audio-indicator {
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
@@ -778,14 +785,13 @@ nav .button.collection-button:active {
   border-radius: 50%;
   box-shadow: 0 0 3px black;
   position: absolute;
-  top: -10%;
+  top: 0;
   left: 0;
 }
 .quiz .options {
   grid-row: 2/3;
   display: grid;
   grid-template-rows: repeat(4, auto);
-  margin-top: 3vh;
   margin-bottom: 30vh;
   background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
   backdrop-filter: blur(10px);
@@ -796,6 +802,7 @@ nav .button.collection-button:active {
 }
 .quiz .options .option {
   padding: 1.2vh 0 1.2vh 3vh;
+  font-size: 1rem;
   color: white;
   letter-spacing: 2px;
 }
@@ -809,13 +816,22 @@ nav .button.collection-button:active {
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.8);
   border-radius: 10px;
   width: 90%;
-  margin-top: 30%;
+  margin-top: 40%;
   font-family: DotGothic16;
   letter-spacing: 2px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   flex-direction: column;
+}
+.quiz .summary > * {
+  margin: 0;
+}
+.quiz .summary h1 {
+  font-size: 1.1rem;
+}
+.quiz .summary p {
+  font-size: 0.9rem;
 }
 @media (min-width: 56em) {
   .quiz .image-container .image {
@@ -866,6 +882,9 @@ nav .button.collection-button:active {
 .bread-crumbs {
   color: #1b1a1a;
   text-align: center;
+  color: #ffffff;
+  letter-spacing: 4px;
+  text-shadow: 0px 2px 1px #003366, 0px -2px 1px #003366, -2px -2px 1px #003366, -2px 2px 1px #003366, 2px -2px 1px #003366, 2px 2px 1px #003366;
 }
 
 .my-pokemon-stats {
