--- a/sass/modal/_index.scss
+++ b/sass/modal/_index.scss
@@ -5,6 +5,14 @@
     color: #000;
     font-family: DotGothic16;
     letter-spacing: 1px;
+
+    h2 {
+      font-size: 1.1rem;
+    }
+    p {
+      font-size: 0.9rem;
+    }
+
     @media (min-width: $breakpoint-lg) {
       h2 {
         font-size: 3rem;
