--- a/sass/quiz/_index.scss
+++ b/sass/quiz/_index.scss
@@ -21,7 +21,7 @@
       @include audio-indicator-style($padding: 0.5rem, $margin: 0.5rem);
       position: absolute;
       top: 0;
-      left: 0;
+      left: -20%;
     }
   }
 
