Change color of info icon

--- a/sass/home/_index.scss
+++ b/sass/home/_index.scss
@@ -17,7 +17,7 @@
       width: 32px;
       height: 32px;
       line-height: 32px;
-      color: rgb(241, 127, 50);
+      color: #0089ff;
       box-shadow: 0 0 10px rgba(255,255,255, 0.4);
       text-shadow: 0 0 8px rgba(216, 176, 176, 0.8);
       @include glass-background;
