--- a/public/style.css
+++ b/public/style.css
@@ -668,7 +668,7 @@ nav .button.collection-button:active {
   width: 32px;
   height: 32px;
   line-height: 32px;
-  color: #f17f32;
+  color: #0089ff;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
   text-shadow: 0 0 8px rgba(216, 176, 176, 0.8);
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
