--- a/sass/cards/_mixins.scss
+++ b/sass/cards/_mixins.scss
@@ -14,7 +14,7 @@
   font-weight: 700;
 
   @media (min-width: $breakpoint-xlg) {
-    grid-template-rows: 190px 1fr;
+    // grid-template-rows: 190px 1fr;
   }
 
   .audio-indicator {
@@ -48,20 +48,19 @@
 
     .attribute-header {
       grid-column: 1 / 2;
-      padding-left: 3rem;
+      text-align: end;
     }
+
     .attribute-value {
-      padding-right: 3rem;
+      text-align: start;
+      margin-left: 1rem;
     }
 
     hr {
       grid-column: 1 / 3;
       border-bottom: solid 1px black;
-      max-width: 270px;
+      max-width: 100%;
       width: 100%;
-      @media (min-width: $breakpoint-sm) {
-        max-width: 170px;
-      }
     }
   }
 }
