--- a/public/style.css
+++ b/public/style.css
@@ -135,7 +135,7 @@ nav .button.collection-button:active {
     transition: all 0.1s;
   }
   nav .button.collection-button:active {
-    margin-top: 10px;
+    margin-top: 12px;
     background: #f7ed94;
     border-bottom: 2px solid #b3aa62;
   }
@@ -159,7 +159,7 @@ nav .button.collection-button:active {
   position: absolute;
   top: 50%;
   left: -10%;
-  height: 20vh;
+  height: 100vh;
   width: 100vw;
 }
 #monster-ball-1 .monster-ball-button {
@@ -235,7 +235,7 @@ nav .button.collection-button:active {
   position: absolute;
   top: 50%;
   left: -10%;
-  height: 20vh;
+  height: 100vh;
   width: 100vw;
 }
 #monster-ball-2 .monster-ball-button {
@@ -306,7 +306,7 @@ nav .button.collection-button:active {
   position: absolute;
   top: 50%;
   left: -10%;
-  height: 20vh;
+  height: 100vh;
   width: 100vw;
 }
 #monster-ball-3 .monster-ball-button {
@@ -393,11 +393,6 @@ nav .button.collection-button:active {
   font-weight: 700;
   position: relative;
 }
-@media (min-width: 87.5em) {
-  .modal.card {
-    grid-template-rows: 190px 1fr;
-  }
-}
 .modal.card .audio-indicator {
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
   backdrop-filter: blur(3px);
@@ -429,21 +424,17 @@ nav .button.collection-button:active {
 }
 .modal.card .attributes .attribute-header {
   grid-column: 1/2;
-  padding-left: 3rem;
+  text-align: end;
 }
 .modal.card .attributes .attribute-value {
-  padding-right: 3rem;
+  text-align: start;
+  margin-left: 1rem;
 }
 .modal.card .attributes hr {
   grid-column: 1/3;
   border-bottom: solid 1px black;
-  max-width: 270px;
+  max-width: 100%;
   width: 100%;
-}
-@media (min-width: 33em) {
-  .modal.card .attributes hr {
-    max-width: 170px;
-  }
 }
 .modal.card .tab-button-bar {
   pointer-events: none;
@@ -560,7 +551,7 @@ nav .button.collection-button:active {
   margin: 0 auto;
   padding: 2rem 2rem 8rem;
 }
-@media (min-width: 33em) {
+@media (min-width: 31em) {
   .cards {
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
@@ -591,11 +582,7 @@ nav .button.collection-button:active {
   font-weight: 700;
   border-radius: 5%;
   transition: all 0.1s;
-}
-@media (min-width: 87.5em) {
-  .cards .card {
-    grid-template-rows: 190px 1fr;
-  }
+  padding: 10px 20px;
 }
 .cards .card .audio-indicator {
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
@@ -628,21 +615,17 @@ nav .button.collection-button:active {
 }
 .cards .card .attributes .attribute-header {
   grid-column: 1/2;
-  padding-left: 3rem;
+  text-align: end;
 }
 .cards .card .attributes .attribute-value {
-  padding-right: 3rem;
+  text-align: start;
+  margin-left: 1rem;
 }
 .cards .card .attributes hr {
   grid-column: 1/3;
   border-bottom: solid 1px black;
-  max-width: 270px;
+  max-width: 100%;
   width: 100%;
-}
-@media (min-width: 33em) {
-  .cards .card .attributes hr {
-    max-width: 170px;
-  }
 }
 .cards .card:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
