Add header to type fileter

--- a/views/home.erb
+++ b/views/home.erb
@@ -21,6 +21,8 @@
     </section>
   </article>
 </aside>
-<aside id="type-tags"></aside>
+<aside id="type-tags">
+  <h2 id="filter-header">タイプでさがす</h2>
+</aside>
 <main class="cards"></main>
 <script type="module" src="js/home/index.js"></script>
