--- a/public/style.css
+++ b/public/style.css
@@ -699,6 +699,13 @@ nav .button.collection-button:active {
   flex-wrap: wrap;
   justify-content: start;
 }
+#type-tags #filter-header {
+  flex: 0 0 100%;
+  font-size: 1.5rem;
+  color: #ffffff;
+  letter-spacing: 4px;
+  text-shadow: 0px 2px 1px #003366, 0px -2px 1px #003366, -2px -2px 1px #003366, -2px 2px 1px #003366, 2px -2px 1px #003366, 2px 2px 1px #003366;
+}
 #type-tags .type-tag {
   font-size: 0.8rem;
   padding: 0.1rem 0.5rem;
@@ -935,3 +942,5 @@ nav .button.collection-button:active {
     width: 70vw;
   }
 }
+
+/*# sourceMappingURL=style.css.map */
