--- a/sass/home/_index.scss
+++ b/sass/home/_index.scss
@@ -62,6 +62,12 @@
   flex-wrap: wrap;
   justify-content: start;
 
+  #filter-header {
+    flex: 0 0 100%;
+    font-size: 1.5rem;
+    @include emphasized-font;
+  }
+
   .type-tag {
     font-size: 0.8rem;
     padding: 0.1rem 0.5rem;
