--- a/sass/common/_mixins.scss
+++ b/sass/common/_mixins.scss
@@ -8,16 +8,16 @@
   backdrop-filter: blur(3px);
 }
 
-@mixin emphasized-font {
+@mixin emphasized-font($color: #003366) {
   color: #ffffff;
   letter-spacing: 4px;
   text-shadow:
-       0px  2px 1px #003366,
-       0px -2px 1px #003366,
-      -2px -2px 1px #003366,
-      -2px  2px 1px #003366,
-       2px -2px 1px #003366,
-       2px  2px 1px #003366;
+       0px  2px 1px $color,
+       0px -2px 1px $color,
+      -2px -2px 1px $color,
+      -2px  2px 1px $color,
+       2px -2px 1px $color,
+       2px  2px 1px $color;
 }
 
 @mixin monster-ball {
