--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,76 @@ html {
   font-weight: normal;
   src: url(DotGothic16-Regular.ttf);
 }
+#go-to-top {
+  background: linear-gradient(to right, #f60002, rgba(246, 0, 2, 0.4));
+  height: 3rem;
+  width: 3rem;
+  position: fixed;
+  border-radius: 50%;
+  overflow: hidden;
+  right: 1rem;
+  bottom: 5rem;
+}
+#go-to-top::before {
+  content: "";
+  border: #1b1a1a 3px solid;
+  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1));
+  position: absolute;
+  top: 50%;
+  left: -30%;
+  height: 100vh;
+  width: 100vw;
+}
+#go-to-top .monster-ball-button {
+  background: #1b1a1a;
+  height: 0.6rem;
+  width: 0.6rem;
+  border-radius: 50%;
+  position: absolute;
+  top: 42%;
+  left: 42%;
+}
+#go-to-top .monster-ball-button::before {
+  content: "";
+  background: linear-gradient(to right bottom, #ffb7b7, rgba(255, 183, 183, 0.6));
+  border-radius: 50%;
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  height: 0.3rem;
+  width: 0.3rem;
+}
+@media (min-width: 56em) {
+  #go-to-top {
+    height: 4.5rem;
+    width: 4.5rem;
+  }
+  #go-to-top .monster-ball-button {
+    height: 0.9rem;
+    width: 0.9rem;
+  }
+  #go-to-top .monster-ball-button::before {
+    height: 0.39rem;
+    width: 0.39rem;
+    top: 30%;
+    left: 30%;
+  }
+}
+@media (min-width: 67em) {
+  #go-to-top {
+    height: 6rem;
+    width: 6rem;
+  }
+  #go-to-top .monster-ball-button {
+    height: 1.2rem;
+    width: 1.2rem;
+  }
+  #go-to-top .monster-ball-button::before {
+    height: 0.51rem;
+    width: 0.51rem;
+  }
+}
+
 body {
   height: 100%;
   margin: 0;
@@ -158,7 +228,7 @@ nav .button.collection-button:active {
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1));
   position: absolute;
   top: 50%;
-  left: -10%;
+  left: -30%;
   height: 100vh;
   width: 100vw;
 }
@@ -234,7 +304,7 @@ nav .button.collection-button:active {
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1));
   position: absolute;
   top: 50%;
-  left: -10%;
+  left: -30%;
   height: 100vh;
   width: 100vw;
 }
@@ -305,7 +375,7 @@ nav .button.collection-button:active {
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1));
   position: absolute;
   top: 50%;
-  left: -10%;
+  left: -30%;
   height: 100vh;
   width: 100vw;
 }
