--- a/public/style.css
+++ b/public/style.css
@@ -23,6 +23,8 @@ html {
   overflow: hidden;
   right: 1rem;
   bottom: 5rem;
+  transform: translateX(200%);
+  transition: 0.4s;
 }
 #go-to-top-container::before {
   content: "";
@@ -91,6 +93,10 @@ html {
   line-height: 1.1rem;
   text-align: center;
 }
+#go-to-top-container.show {
+  transform: translateX(0%);
+}
+
 body {
   height: 100%;
   margin: 0;
