--- a/public/style.css
+++ b/public/style.css
@@ -871,52 +871,55 @@ nav .button.collection-button:active {
   }
 }
 .quiz {
+  height: 100vh;
   position: relative;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 60vh auto;
-  justify-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .quiz .image-container {
-  grid-row: 1/2;
-  margin-top: 32%;
-  align-self: center;
   position: relative;
+  height: 30%;
+  margin-top: 20%;
 }
 .quiz .image-container .image {
-  max-height: 12rem;
-  max-width: 12rem;
+  height: 100%;
 }
 .quiz .image-container .audio-indicator {
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
   backdrop-filter: blur(3px);
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
   backdrop-filter: blur(3px);
-  padding: 0.5rem;
-  margin: 0.5rem;
+  padding: 0.3rem;
+  margin: 0.3rem;
   border-radius: 50%;
   box-shadow: 0 0 3px black;
   position: absolute;
   top: 0;
-  left: -20%;
+  left: 0;
 }
 .quiz .options {
-  grid-row: 2/3;
   display: grid;
-  grid-template-rows: repeat(4, auto);
-  margin-bottom: 30vh;
-  background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
-  backdrop-filter: blur(10px);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   border-radius: 10px;
+  overflow: hidden;
   width: 90%;
+  height: 30%;
+  margin-top: 6%;
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.8);
-  font-family: DotGothic16;
+  text-align: center;
 }
 .quiz .options .option {
-  padding: 1.2vh 0 1.2vh 3vh;
+  background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
+  backdrop-filter: blur(10px);
   font-size: 1rem;
   color: white;
   letter-spacing: 2px;
+  height: 100%;
+  display: grid;
+  align-content: center;
 }
 .quiz .options .option:active {
   background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.5));
@@ -928,67 +931,53 @@ nav .button.collection-button:active {
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.8);
   border-radius: 10px;
   width: 90%;
-  margin-top: 40%;
+  max-width: 1000px;
   font-family: DotGothic16;
   letter-spacing: 2px;
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  flex-direction: column;
-}
-.quiz .summary > * {
-  margin: 0;
-}
-.quiz .summary h1 {
-  font-size: 1.1rem;
-}
-.quiz .summary p {
-  font-size: 0.9rem;
 }
 @media (min-width: 56em) {
+  .quiz {
+    max-width: 1000px;
+    margin: 0 auto;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  .quiz .image-container {
+    margin-top: 0;
+  }
   .quiz .image-container .image {
-    max-height: 24rem;
-    max-width: 24rem;
+    height: 110%;
+  }
+  .quiz .options {
+    width: 50%;
+  }
+  .quiz .options .option {
+    font-size: 1.6rem;
+    letter-spacing: 0.5rem;
   }
 }
 @media (min-width: 67em) {
-  .quiz {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 300px 1fr auto;
-  }
-  .quiz .image-container {
-    grid-column: 1/2;
-    grid-row: 1/3;
-  }
   .quiz .image-container .image {
-    max-height: 34rem;
-    max-width: 34rem;
+    height: 130%;
   }
   .quiz .options {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    font-size: 2rem;
-  }
-  .quiz .summary {
-    grid-column: 1/3;
-    align-self: center;
-    max-width: 900px;
-  }
-  .quiz .summary h1 {
-    font-size: 4rem;
-  }
-  .quiz .summary p {
-    font-size: 2rem;
+    margin-left: 100px;
+    width: 80%;
   }
 }
 
 #result-lost {
   color: #5477e7;
+  font-weight: bold;
 }
 
 #result-won {
   color: #61e261;
+  font-weight: bold;
 }
 
 .bread-crumbs {
